fix. search form css

--- a/app/assets/stylesheets/main.css.scss
+++ b/app/assets/stylesheets/main.css.scss
@@ -236,7 +236,7 @@ div.flash.alert {
 }
 
 input, select {
-  margin-bottom: 1px;
+  //margin-bottom: 1px;
   margin-top: 1px;
   vertical-align: middle;
 }
