--- a/app/views/bankbooks/index.html.slim
+++ b/app/views/bankbooks/index.html.slim
@@ -14,4 +14,4 @@ table#list-table
       td= bankbook.number
       td= bankbook.account_holder
       td.link_button_area
-        = link_to '상세보기', bankbook, class: 'btn btn-primary'
+        = link_to t('common.button.detail_veiw'), bankbook, class: 'btn btn-primary'
