--- a/app/views/business_clients/index.html.slim
+++ b/app/views/business_clients/index.html.slim
@@ -37,7 +37,7 @@
           td
             =h client.owner
           td.link_button_area
-            = link_to '상세보기', client, class: 'btn btn-primary'
+            = link_to t('common.button.detail_veiw'), client, class: 'btn btn-primary'
     br
     center
       = will_paginate @business_clients
