--- a/app/views/creditcards/index.html.slim
+++ b/app/views/creditcards/index.html.slim
@@ -47,4 +47,4 @@ table#list-table
       td
         =h creditcard.cardholder
       td.link_button_area
-        = link_to '상세보기', creditcard, class: 'btn btn-primary'
+        = link_to t('common.button.detail_veiw'), creditcard, class: 'btn btn-primary'
