--- a/app/views/dayworker_taxes/index.html.slim
+++ b/app/views/dayworker_taxes/index.html.slim
@@ -26,4 +26,4 @@ table#list-table
         td.numrow= number_to_currency dayworker_tax.tax_amount
         td.numrow= number_to_currency dayworker_tax.pay_amount
         td.link_button_area
-          = link_to '상세보기', dayworker_tax, class: 'btn btn-primary'
+          = link_to t('common.button.detail_veiw'), dayworker_tax, class: 'btn btn-primary'
