--- a/app/views/dayworkers/index.html.slim
+++ b/app/views/dayworkers/index.html.slim
@@ -14,4 +14,4 @@ table#list-table
       tr.selectable.link_to*{"data-url" => dayworker_path(dayworker)}
         td=h dayworker.juminno
         td.link_button_area
-          = link_to '상세보기', dayworker, class: 'btn btn-primary'
+          = link_to t('common.button.detail_veiw'), dayworker, class: 'btn btn-primary'
