--- a/app/views/holidays/index.html.slim
+++ b/app/views/holidays/index.html.slim
@@ -19,4 +19,4 @@ table#list-table
         td=h holiday.theday
         td=h holiday.dayname
         td.link_button_area
-          = link_to '상세보기', holiday, class: 'btn btn-primary'
+          = link_to t('common.button.detail_veiw'), holiday, class: 'btn btn-primary'
