--- a/app/views/promissories/index.html.slim
+++ b/app/views/promissories/index.html.slim
@@ -14,4 +14,4 @@ table#list-table
       td= promissory.published_at
       td= number_to_currency promissory.amount
       td.link_button_area
-        = link_to '상세보기', promissory, class: 'btn btn-primary'
+        = link_to t('common.button.detail_veiw'), promissory, class: 'btn btn-primary'
