--- a/app/views/section_enrollment/enroll_reports/index.html.slim
+++ b/app/views/section_enrollment/enroll_reports/index.html.slim
@@ -28,4 +28,4 @@ table#list-table
       td
         =h enrollment.address
       td.link_button_area
-        = link_to '상세보기', enrollment, class: 'btn btn-primary'
+        = link_to t('common.button.detail_veiw'), enrollment, class: 'btn btn-primary'
