--- a/app/views/taxbills/_list.html.slim
+++ b/app/views/taxbills/_list.html.slim
@@ -26,4 +26,4 @@ table#list-table
       td class="numrow"
         =h number_to_currency taxbill.total
       td.link_button_area
-        = link_to '상세보기', taxbill, class: 'btn btn-primary'
+        = link_to t('common.button.detail_veiw'), taxbill, class: 'btn btn-primary'
