--- a/app/views/vacation_types/index.html.slim
+++ b/app/views/vacation_types/index.html.slim
@@ -11,4 +11,4 @@ table#list-table
     tr.selectable.link_to*{"data-url" => vacation_type_path(type)}
       td= type.title
       td.link_button_area
-        = link_to '상세보기', type, class: 'btn btn-primary'
+        = link_to t('common.button.detail_veiw'), type, class: 'btn btn-primary'
