--- a/app/views/accounts/_account.html.slim
+++ b/app/views/accounts/_account.html.slim
@@ -4,4 +4,4 @@ tr.selectable.link_to*{"data-url" => account_path(account)}
   td= account.notify_email
   td= account.boxcar_account
   td.link_button_area
-  	= link_to '상세보기', account, class: 'btn btn-primary'
+  	= link_to t('common.button.detail_veiw'), account, class: 'btn btn-primary'
