--- a/app/views/documents/index.html.slim
+++ b/app/views/documents/index.html.slim
@@ -6,7 +6,7 @@
     = t("common.title.search")
     ' :
     = search_field_tag 'query', params[:query]
-    = submit_tag "검색"
+    = submit_tag t('common.button.search')
     = render 'accessors/search_form'
 #show_command
   = link_to t('documents.new.title'), new_document_path
@@ -41,7 +41,7 @@ table#list-table
         td
           =h document.localize_status
         td.link_button_area
-          = link_to '상세보기', document, class: 'btn btn-primary'
+          = link_to t('common.button.detail_veiw'), document, class: 'btn btn-primary'
 br
 div.clear
 center
