--- a/app/views/ledger_accounts/index.html.slim
+++ b/app/views/ledger_accounts/index.html.slim
@@ -18,6 +18,6 @@ h2= t("common.title.list")
           td= account.title
           td= account.category
           td.link_button_area
-            = link_to '상세보기', account, class: 'btn btn-primary'
+            = link_to t('common.button.detail_veiw'), account, class: 'btn btn-primary'
 - else
   h3= t('.empty')
