--- a/app/views/taxbill_items/show.html.slim
+++ b/app/views/taxbill_items/show.html.slim
@@ -5,7 +5,7 @@
   = " "
   = link_to t('common.title.list'), taxbill
 
-h3= "상세정보"
+h3= t('taxbill_items.show.detail')
 .box
   dl
     dt= TaxbillItem.human_attribute_name(:transacted_at)
