--- a/app/views/vacations/index.html.slim
+++ b/app/views/vacations/index.html.slim
@@ -1,6 +1,8 @@
 - title t('.title')
 
 #show_command
+  = link_to t("vacation_types.title"), :vacation_types
+  = " "
   = link_to t('common.title.back'), :root
 
 h2= t('common.title.list')
