--- a/app/views/bank_accounts/index.html.slim
+++ b/app/views/bank_accounts/index.html.slim
@@ -1,5 +1,7 @@
 
 #show_command
+  = link_to t("promissories.title"), :promissories
+  = " "
   = link_to t('bank_accounts.index.total_view'), [:total, :bank_accounts]
   = " "
   = link_to t('bank_accounts.index.view_cashier'), :bank_transactions
@@ -13,8 +15,8 @@
 h2
   = t('bank_accounts.index.bank_accounts_list')
   ' :
-  = t('bank_accounts.index.balance') 
-  = number_to_currency BankAccount.remain
+  = t('bank_accounts.index.balance') + " "
+  = number_to_currency BankAccount.remain + @promissories.total_amount
 
 - unless bank_accounts.empty?
   table#list-table
@@ -35,3 +37,21 @@ h2
             = link_to '상세보기', account, class: 'btn btn-primary'
 - else
   h4= t('.empty')
+
+#show_command
+  = link_to t("common.title.new"), [:new, :promissory]
+h2 어음 관리
+
+table#list-table
+  tr
+    th= Promissory.human_attribute_name("expired_at")
+    th= Promissory.human_attribute_name("published_at")
+    th= Promissory.human_attribute_name("amount")
+    th.link_button_area
+  - @promissories.each do |promissory|
+    tr.selectable.link_to*{"data-url" => promissory_path(promissory)}
+      td= promissory.expired_at
+      td= promissory.published_at
+      td= number_to_currency promissory.amount
+      td.link_button_area
+        = link_to '상세보기', promissory, class: 'btn btn-primary'
