modify document-taxbill association

--- a/app/views/documents/show.html.slim
+++ b/app/views/documents/show.html.slim
@@ -1,6 +1,9 @@
 - title t('.title')
 
 #show_command
+  = link_to "세금계산서 만들기", new_taxbill_path(document: document)
+  = " "
+
   = link_to t('common.title.edit'), edit_document_path(document)
   = " "
   = link_to t('common.title.destroy'), document, :method => :delete, data: {confirm: t("common.messages.delete_confirm")}
