--- a/app/views/promissories/_form.html.slim
+++ b/app/views/promissories/_form.html.slim
@@ -1,5 +1,5 @@
 #show_command
-  = link_to t("common.title.back"), :promissories
+  = link_to t("common.title.back"), :bank_accounts
 
 h2= t("common.title.#{action_name}")
 
