--- a/app/views/promissories/show.html.slim
+++ b/app/views/promissories/show.html.slim
@@ -3,7 +3,7 @@
   = " "
   = link_to t('common.title.destroy'), @promissory, :method => :delete, data: {confirm: t("common.messages.delete_confirm")}
   = " "
-  = link_to t('common.title.list'), :promissories
+  = link_to t('common.title.list'), :bank_accounts
 
 h3= "Promissory"
 .box
