--- a/app/views/payrolls/show.html.slim
+++ b/app/views/payrolls/show.html.slim
@@ -14,7 +14,7 @@ table#list-table
     th= t("common.menu")
   - payroll.items.each do |item|
     tr
-      td= item.payroll_category.title
+      td= item.payroll_category.title rescue ""
       td.numrow= number_to_currency item.amount
       td= link_to t("common.title.edit"), edit_payroll_payroll_item_path(payroll,item)
     
