--- a/app/views/taxbills/show.html.slim
+++ b/app/views/taxbills/show.html.slim
@@ -42,6 +42,7 @@ h2
 
     = render "taxbills/error", :target => taxbill
 = render 'changelog', target: taxbill
+= render 'reports/info', target: taxbill
 
 
 
