fix failed test

--- a/app/views/application/_header.html.slim
+++ b/app/views/application/_header.html.slim
@@ -16,7 +16,7 @@ div#main_nav.navbar.navbar-fixed-top
                 b.caret
               ul.dropdown-menu
                 li= link_to t("employees.index.title"), :employees
-                li= link_to t("vacations.index.title"), vacation_path(current_employee)
+                li= link_to t("vacations.show.title"), vacation_path(current_employee)
                 - if current_person.permission? 'commutes'
                   li= link_to t("commutes.index.title"), commute_path(current_employee)
                 - if current_person.has_payment_info
