--- a/app/views/bankbooks/_form.html.slim
+++ b/app/views/bankbooks/_form.html.slim
@@ -13,6 +13,9 @@ h2= t("common.title.#{action_name}")
       = f.label :number
       = f.text_field :number
     p
+      = f.label :bankname
+      = f.text_field :bankname
+    p
       = f.label :account_holder
       = f.text_field :account_holder
     p
