--- a/app/views/documents/show.html.slim
+++ b/app/views/documents/show.html.slim
@@ -1,6 +1,8 @@
 - title t('.title')
 
 #show_command
+  = link_to "인사정보와 연결하기", [:find_employee, document]
+  = " "
   - if document.owner
     = link_to "세금계산서 보기", document.owner
   - else
@@ -28,6 +30,11 @@ h2
         = document.tag_list
     h3
       = t(".backlink")
+    ul
+      li
+        = Employee.model_name.human
+        = ": "
+        = link_to document.employee.fullname, document.employee
     ul
       - account = document.account_for_tag(Employee.model_name.human)
       - if account
