--- a/app/views/investments/show.html.slim
+++ b/app/views/investments/show.html.slim
@@ -3,7 +3,7 @@
   = " "
   = link_to t('common.title.destroy'), @investment, :method => :delete, data: {confirm: t("common.messages.delete_confirm")}
   = " "
-  = link_to t('common.title.list'), :investments
+  = link_to t('common.title.list'), :bank_accounts
 
 h3
   = t('investments.show.basic')
