--- a/app/views/bank_accounts/index.html.slim
+++ b/app/views/bank_accounts/index.html.slim
@@ -1,4 +1,3 @@
-
 #show_command
   = link_to t('bank_accounts.index.total_view'), [:total, :bank_accounts]
   = " "
@@ -6,15 +5,20 @@
   = " "
   = link_to t('bank_accounts.index.view_transfer'), :bank_transfers
   = " "
-  = link_to t('bank_accounts.index.create_bank_accounts'), [:new, :bank_account]
-  = " "
   = link_to t('common.title.back'), :root
 
 h2
-  = t('bank_accounts.index.bank_accounts_list')
+  = "은행계좌 관리"
   ' :
-  = t('bank_accounts.index.balance') + " "
-  = number_to_currency BankAccount.remain + @promissories.total_amount
+  = number_to_currency @total_amount
+
+#show_command
+  = link_to t("common.title.new"), [:new, :bank_account]
+
+h3
+  = "당좌 계좌"
+  ' :
+  = number_to_currency bank_accounts.remain
 
 - unless bank_accounts.empty?
   table#list-table
@@ -38,7 +42,10 @@ h2
 
 #show_command
   = link_to t("common.title.new"), [:new, :promissory]
-h2 어음 관리
+h3
+  = "어음"
+  ' :
+  = number_to_currency @promissories.total_amount
 
 #promissories
   table#list-table
@@ -54,3 +61,25 @@ h2 어음 관리
         td= number_to_currency promissory.amount
         td.link_button_area
           = link_to t('common.button.detail_veiw'), promissory, class: 'btn btn-primary'
+
+#show_command
+  = link_to t("common.title.new"), [:new, :investment]
+h3
+  = "투자자산"
+  ' :
+  = number_to_currency @investments.total_amount
+
+#investments
+  table#list-table
+    tr
+      th= Investment.human_attribute_name(:title)
+      th= Investment.human_attribute_name(:current_estimation)
+      th= Investment.human_attribute_name(:initial_estimation)
+      th.link_button_area
+    - @investments.each do |investment|
+      tr.selectable.link_to*{"data-url" => investment_path(investment)}
+        td= investment.title
+        td= number_to_currency investment.current_estimation.amount rescue ""
+        td= number_to_currency investment.initial_estimation.amount rescue ""
+        td.link_button_area
+          = link_to t('common.button.detail_veiw'), investment, class: 'btn btn-primary'
