--- a/app/views/taxbills/_error.html.erb
+++ b/app/views/taxbills/_error.html.erb
@@ -1,6 +1,8 @@
 <div  <%= taxbill.billtype == 'purchase' ? "style='padding: 6px; border: 1px solid royalblue; background-color: lavender;'" : "style='padding: 6px; border: 1px solid purple; background-color: pink;'"%>>
-      <table border="0" cellspacing="0" cellpadding="5" width="100%">
-      <tr><td align="right">[<%= link_to t("taxbill_items.new.title"), [:new, taxbill, :taxbill_item] %>]</td></tr>
+      <% if taxbill.access?(current_person, :write) %>
+        <table border="0" cellspacing="0" cellpadding="5" width="100%">
+        <tr><td align="right">[<%= link_to t("taxbill_items.new.title"), [:new, taxbill, :taxbill_item] %>]</td></tr>
+      <% end %>
       </table>
       <table border="1" cellspacing="0" cellpadding="5" width="100%">
         <% unless taxbill.items.empty? %>
