--- a/app/views/taxbills/show.html.slim
+++ b/app/views/taxbills/show.html.slim
@@ -1,10 +1,11 @@
 - title t('.title')
 
 #show_command
-  = link_to t('common.title.edit'), [:edit, taxbill]
-  = " "
-  = link_to t('common.title.destroy'), taxbill, :method => :delete, data: {confirm: t("common.messages.delete_confirm")}
-  = " "
+  - if taxbill.access?(current_person, :write)
+    = link_to t('common.title.edit'), [:edit, taxbill]
+    = " "
+    = link_to t('common.title.destroy'), taxbill, :method => :delete, data: {confirm: t("common.messages.delete_confirm")}
+    = " "
   = link_to t('common.title.list'), :taxbills
 
 h2
