--- a/app/views/payment_requests/_form.html.slim
+++ b/app/views/payment_requests/_form.html.slim
@@ -5,6 +5,8 @@ h2= t("common.title.#{action_name}")
 
 = form_for @payment_request, html: {class: "tabular"} do |f|
   = f.error_messages
+  = f.hidden_field :basis_type, value: f.object.basis_type
+  = f.hidden_field :basis_id, value: f.object.basis_id
   .box
     p
       = f.label :bank_name
