--- a/app/views/taxbills/show.html.slim
+++ b/app/views/taxbills/show.html.slim
@@ -1,6 +1,12 @@
 - title t('.title')
 
 #show_command
+  - if taxbill.payment_request
+    = link_to "지급청구 보기", taxbill.payment_request
+  - else
+    = link_to "지급청구 생성", [:payment_request, taxbill]
+
+  = " "
   - if taxbill.access?(current_person, :write)
     = link_to t('common.title.edit'), [:edit, taxbill]
     = " "
