--- a/app/views/dayworker_taxes/show.html.slim
+++ b/app/views/dayworker_taxes/show.html.slim
@@ -1,6 +1,11 @@
 - title t('dayworker_taxes.title')
 
 #show_command
+  - if dayworker_tax.payment_request
+    = link_to "지급청구 보기", dayworker_tax.payment_request
+  - else
+    = link_to "지급청구 생성", [:payment_request, dayworker_tax]
+  = " "
   = link_to t('common.title.edit'), edit_dayworker_taxis_path(dayworker_tax)
   = " "
   = link_to t('common.title.list'), dayworker_taxes_path
