--- a/app/views/accounts/my.html.slim
+++ b/app/views/accounts/my.html.slim
@@ -5,4 +5,4 @@
   = " "
   = link_to t("accounts.changepw.title"), changepw_account_path(@account)
 
-= render 'detail', :account => @account
+= render 'detail', :account => @account, subaccount_menu: false
