--- a/app/views/accounts/show.html.slim
+++ b/app/views/accounts/show.html.slim
@@ -12,4 +12,4 @@
   = " "
   =link_to t('common.title.list'), accounts_path
 
-= render 'detail', :account => @account
+= render 'detail', :account => @account, subaccount_menu: true
