--- a/app/views/accounts/_detail.html.slim
+++ b/app/views/accounts/_detail.html.slim
@@ -11,7 +11,7 @@ h2= account.name
 
     =render "shared/attachments/detail", target: account
 
-    - if account.person.admin?
+    - if subaccount_menu and current_person.admin?
       #google_account
         - if account.google_account?
           = button_to t("accounts.google.destroy"), [:google_apps, account], method: :delete, data: {data: {confirm: t("common.messages.delete_confirm")}}
