--- a/app/views/employees/show.html.slim
+++ b/app/views/employees/show.html.slim
@@ -46,6 +46,9 @@ h2
         h3
           = t('.related_documents')
         ul
+          - @employee.documents.each do |document|
+            li= link_to document.title, document
+
           - if !@required_tagnames.blank?
             - for rtn in @required_tagnames
               li
